--- a/winsample/docker-compose.yml
+++ b/winsample/docker-compose.yml
@@ -6,10 +6,13 @@ services:
   web:
     # replace username/repo:tag with your name and image details
     # image: 52.151.10.146/library/friendlyhello:v1
-    build:
-      context: .
+    image: dtr.cf.org/library/web:*version
       args:
         version: *version
+    #build:
+      #context: .
+      #args:
+        #version: *version
     deploy:
       replicas: 2
       restart_policy:
